fix: align image

--- a/src/components/Image/image.module.scss
+++ b/src/components/Image/image.module.scss
@@ -1,5 +1,8 @@
+.acCompImageBox {
+  text-align: center;
+}
+
 .acCompImage {
-  display: block;
   max-width: 100%;
   height: auto;
 }
